--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,9 +1,6 @@
 name: Create and publish a Docker image to GitHub Container Registry & DockerHub
 
-on:
-  workflow_dispatch:
-  push:
-    branches: ['main']
+on: [push, workflow_dispatch]
 
 env:
   DHUB_IMAGE_NAME: bdwyertech/release-notifier
@@ -11,6 +8,7 @@ env:
 
 jobs:
   build-and-push-image:
+    if: startsWith(github.ref, 'refs/tags/')
     runs-on: ubuntu-latest
     permissions:
       contents: read
